--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ html {
     background: rgb(255,138,138);
     /* background: linear-gradient(302deg, rgb(255 138 138 / 77%) 0%, rgb(183 116 255 / 94%) 100%); */
     /* background: linear-gradient(302deg, rgb(15 16 24 / 77%) 0%, rgb(57 45 103 / 94%) 100%); */
-    background: linear-gradient(302deg, rgb(30 21 53 / 77%) 0%, rgb(57 45 103 / 94%)100%);
+    /* background: linear-gradient(302deg, rgb(30 21 53 / 77%) 0%, rgb(57 45 103 / 94%)100%); */
+    background: linear-gradient(302deg, rgb(62 49 97) 0%, rgb(111 101 149)100%);
     color: #fff;
     font-weight: 300;
     line-height: 1.62857;
@@ -38,6 +39,12 @@ html {
 
   .calculations-box {
     background-color: #36376059;
+    margin-left:15px;
+    margin-right: 15px;
+  }
+  .calculation-box {
+    margin-left:15px;
+    margin-right: 15px;
   }
   
   .footer {
