--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,10 @@ html {
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: grayscale;
     background: rgb(255,138,138);
-    /* background: linear-gradient(302deg, rgb(255 138 138 / 77%) 0%, rgb(183 116 255 / 94%) 100%); */
+    background: linear-gradient(302deg, rgb(255 138 138 / 77%) 0%, rgb(183 116 255 / 94%) 100%);
     /* background: linear-gradient(302deg, rgb(15 16 24 / 77%) 0%, rgb(57 45 103 / 94%) 100%); */
     /* background: linear-gradient(302deg, rgb(30 21 53 / 77%) 0%, rgb(57 45 103 / 94%)100%); */
-    background: linear-gradient(302deg, rgb(62 49 97) 0%, rgb(111 101 149)100%);
+    /* background: linear-gradient(302deg, rgb(62 49 97) 0%, rgb(111 101 149)100%); */
     color: #fff;
     font-weight: 300;
     line-height: 1.62857;
